[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Scenes/Frog/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Scenes/Frog/MapModules/ModuleLoader.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scripts/Frog/BaseGame.gd" type="Script" id=3]
[ext_resource path="res://Assets/icon.png" type="Texture" id=4]
[ext_resource path="res://Assets/Shaders/crt_material.tres" type="Material" id=5]
[ext_resource path="res://Assets/Fonts/GameFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Fonts/GameFont.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 40
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 3 )

[node name="P1" type="ViewportContainer" parent="."]
margin_left = 128.0
margin_right = 448.0
margin_bottom = 600.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="P1"]
size = Vector2( 192, 384 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="P1/Viewport"]
position = Vector2( 384, 32 )
current = true
zoom = Vector2( 4.333, 3 )
smoothing_enabled = true
smoothing_speed = 15.0

[node name="Player" parent="P1/Viewport" instance=ExtResource( 1 )]
position = Vector2( 64, 448 )
Map = NodePath("../Map")

[node name="Map" parent="P1/Viewport" instance=ExtResource( 2 )]
position = Vector2( -32, 384 )

[node name="P2" type="ViewportContainer" parent="."]
margin_left = 576.0
margin_right = 896.0
margin_bottom = 600.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="P2"]
size = Vector2( 192, 384 )
own_world = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="P2/Viewport"]
position = Vector2( 384, 32 )
current = true
zoom = Vector2( 4.333, 3 )
smoothing_enabled = true
smoothing_speed = 15.0

[node name="Player" parent="P2/Viewport" instance=ExtResource( 1 )]
position = Vector2( 64, 448 )
Map = NodePath("../Map")
PlayerID = "P2"

[node name="Map" parent="P2/Viewport" instance=ExtResource( 2 )]
position = Vector2( -32, 384 )

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scores" type="Node2D" parent="." groups=[
"ScoreBoard",
]]

[node name="Score0" type="Label" parent="Scores"]
margin_left = 132.0
margin_top = 556.0
margin_right = 444.0
margin_bottom = 1140.0
custom_fonts/font = ExtResource( 6 )
text = "SCORE:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score1" type="Label" parent="Scores"]
margin_left = 580.0
margin_top = 556.0
margin_right = 892.0
margin_bottom = 1140.0
custom_fonts/font = ExtResource( 6 )
text = "SCORE:
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="Scores"]
visible = false
margin_left = 448.0
margin_top = 16.0
margin_right = 576.0
margin_bottom = 600.0
custom_fonts/font = ExtResource( 6 )
text = "HighScore:
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EndScreen" type="Node2D" parent="." groups=[
"ENDSCREEN",
]]
visible = false
position = Vector2( 352, 172 )

[node name="Label" type="Label" parent="EndScreen"]
margin_right = 320.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "-----------
GAME OVER
-----------
PRESS ENTER
TO CONTINUE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Coins" type="Label" parent="EndScreen" groups=[
"COINDISPLAY",
]]
margin_left = 96.0
margin_top = 192.0
margin_right = 224.0
margin_bottom = 208.0
custom_fonts/font = ExtResource( 6 )
text = "COINS: "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeLeft" type="Label" parent="EndScreen"]
margin_left = 32.0
margin_top = 144.0
margin_right = 288.0
margin_bottom = 184.0
custom_fonts/font = SubResource( 2 )
text = "10"
align = 1

[node name="WINSCREEN" type="Node2D" parent="." groups=[
"WINSCREEN",
]]
visible = false
position = Vector2( 352, 172 )

[node name="Label" type="Label" parent="WINSCREEN"]
margin_right = 320.0
margin_bottom = 128.0
custom_fonts/font = SubResource( 1 )
text = "-
-
-
-"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Retern" type="Label" parent="WINSCREEN"]
margin_top = 144.0
margin_right = 320.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 1 )
text = "PRESS ENTER
TO RETURN"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shader" type="Sprite" parent="." groups=[
"SHADER",
]]
material = ExtResource( 5 )
scale = Vector2( 16, 9.375 )
texture = ExtResource( 4 )
centered = false
flip_v = true
